helloworld-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: helloworld
  name: helloworld-nodeport
spec:
  ports:
  - name: 8080-80
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
  type: NodePort
status:
  loadBalancer: {}
